final_submit/project1-2/src/SQLParser.java
/* Generated By:JavaCC: Do not edit this line. SQLParser.java */
        import com.sleepycat.je.*;

        import java.io.File;
        import java.util.*;
        import java.util.Map.*;


        class SQLParser implements SQLParserConstants {

                public static final boolean NOT_READONLY = false;
                public static final boolean READONLY = true;

                public static final int COLNAME = 0;
                public static final int DATATYPE = 1;
                public static final int NULLITY = 2;
                public static final int KEYTYPE = 3;

                public static final int FORCOL = 0;
                public static final int REFEDTABLENAME = 1;
                public static final int REFEDCOL = 2;

                //These prefix strings are attached to each database record key's head.
                public static final String colDefPrefix = "@cd:";
                public static final String forKeyPrefix = "#fk:";
                public static final String refingPtPrefix = "!ref->:";
                public static final String refedPtPrefix = "!ref<-:";

                public static String myID = "SQL_*************> ";

                private static File myEnvPath = new File("./db");

                private static DatabaseEntry theKey = new DatabaseEntry();
                private static DatabaseEntry theData = new DatabaseEntry();

                private static MyEnv myEnv = new MyEnv();

                private static SQLParser myParser;

                public static void main (String[] args)  {
                        try {
                                myEnv.setup(myEnvPath, false);
                                initiate();
                } finally {
                                myEnv.close();
                        }
                }

                public static void initiate() {
                        System.out.println(myID);
                        myParser = new SQLParser(System.in) ;
                myParser.run();
                }

                public void run() {
                        try {
                                myParser.Command();
                        } catch (TokenMgrError tme) {
                                System.out.println("SyntaxError");

                                initiate();

                        } catch (ParseException pe) {
                                System.out.println("SyntaxError");

                                initiate();

                        } catch (Exception e) {
                                System.out.println("UndefinedError");

                                initiate();
                        }
                }

                public static void printMessage(String msg) {
                        System.out.println(myID + msg);
                }







                //********* column definition manipulation method *********//
                //		
                //    note : Every column definition related variables are handled by these methods.		
                //
                //    getter : getCol, getColInfo
                //    modifier : modifyColInfo
                //    setter : infoToCol, setColIntoHash
                //

                //

                public String getCol(String colName) {
                        return colDefHash.get(colDefPrefix + colName);
                }

                public String getColInfo(String col, int infoKind) {
                        String[] info = col.split(" ");
                        return info[infoKind];
                }

                public String modifyColInfo(String col, int infoKind, String newInfo) {
                        String[] info = col.split(" ");
            info[infoKind] = newInfo; // type check need
            String newCol = info[0];
            for(int i=1; i<4; i++){
                    newCol = newCol.concat(" "+info[i]);
            }
            return newCol;
                }

                public String infoToCol(String colName, String dataType, String nullity, String keyType) {
                        return new String(colName +" " + dataType + " " + nullity + " " + keyType);
                }

                public void setColIntoHash(String col) {
                        String colName = getColInfo(col, COLNAME);
                        colDefHash.put(colDefPrefix + colName ,col);
                }



                //********* foreign key manipulation method *********//
                //
                //    note : Every foreign key related variables are handled by these methods.
                //			 Foreign keys are composed by 3 parts
                //
                //    getter : getForKey, getForColList, getRefedTableName, getRefedColList
                //    setter : partoToForKey (to aggregate foreign key information into one string)						
                //			   setForKeyIntoHash 
                //							
                //							forColList					 refedTableName  refedColList
                //			 foreign key (<COLUMN_NAME_LIST>) referenced <TABLENAME> (<COLUMN_NAME_LIST>)
                // 
                // * for : foreign
                // * col : column
                // * refed : referenced
                // * refing : referencing

                public String getForKey(String fId) { // fId >= 1
                        return forKeyHash.get(forKeyPrefix+fId);
                }

                private String getForKeyPart(String forKey, int Part) {
                        String[] forKeyArr = forKey.split(" ");
                        return forKeyArr[Part];
                }

                public ArrayList<String> getForColList (String forKey) {
                        String forCol = getForKeyPart(forKey, FORCOL);
                        String[] forColArr = forCol.split(",");
                        return new ArrayList<String>(Arrays.asList(forColArr));
                }

                public String getRefedTableName (String forKey) {
                        return getForKeyPart(forKey, REFEDTABLENAME);
                }

                public ArrayList<String> getRefedColList (String forKey) {
                        String refedCol = getForKeyPart(forKey, REFEDCOL);
                        String[] refedColArr = refedCol.split(",");
                        return new ArrayList<String>(Arrays.asList(refedColArr));
                }

                public String partToForKey (ArrayList<String> forColList,
                                                                        String refedTableName,
                                                                        ArrayList<String> refedColList ) {

                        String forKey = new String();
                        for(int i=0; i<forColList.size(); i++) {
                                forKey = forKey.concat(forColList.get(i) + ",");
                        }
                        forKey = forKey.substring(0, forKey.length()-1);

                        forKey = forKey.concat(" " + refedTableName + " ");

                        for(int i=0; i<refedColList.size(); i++) {
                                forKey =forKey.concat(refedColList.get(i) + ",");
                        }
                        forKey = forKey.substring(0, forKey.length()-1);

                        return forKey;
                }

                public void setForKeyIntoHash(int fId, String forKey) {
                        forKeyHash.put(forKeyPrefix+fId, forKey);
                }



                //********* program global variable *********//
                //			  
                //	note : These variables are used globally in this program
                //     
                //	Hash variable : To store each kind of key/value sets.
                //					Each kind's key are attached by discrimination prefix.
                //	* refedPtHash (referenced pointing Hash)
                //			: To store each table's referenced information, 
                //			  this Hash is declared by 2 dimension Hash.
                //
                //




                String thisTableName;
                String refedTableName;
                int primaryKeyOccur;
                int forKeyOccur;

                HashMap<String, String> colDefHash; //key Prefix : @cd:
                HashMap<String, String> forKeyHash; //key Prefix : #fk:
                HashMap<String, String> refingPtHash; //key Prefix : !ref->:
                HashMap<String, HashMap<String, String> > refedPtHash; //Prefix : !ref<-:
                                                                                                                           //key1 : table name, 
                                                                                                                           //key2 : refed Col name, value2 : refing col name 

                ArrayList<String> priColList;
                ArrayList<String> forColList;

                ArrayList<String> refedTableList;
                ArrayList<String> refedColList;

//**************************************************************************//
//************************** BNF production ********************************//
//**************************************************************************//







//******************* Query *******************//
  final public void Command() throws ParseException, Exception {
    if (jj_2_1(2147483647)) {
      jj_consume_token(EXIT);
      jj_consume_token(SEMICOLON);
    } else {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case SELECT:
      case CREATE:
      case INSERT:
      case DELETE:
      case DESC:
      case DROP:
      case SHOW:
        QueryList();
        jj_consume_token(EXIT);
        jj_consume_token(SEMICOLON);
        break;
      default:
        jj_la1[0] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
  }

  final public void QueryList() throws ParseException, Exception {
    label_1:
    while (true) {
      TryQuery();
                System.out.println(myID);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case SELECT:
      case CREATE:
      case INSERT:
      case DELETE:
      case DESC:
      case DROP:
      case SHOW:
        ;
        break;
      default:
        jj_la1[1] = jj_gen;
        break label_1;
      }
    }
  }

  final public void TryQuery() throws ParseException, Exception {
    try {
      Query();
    } catch (SQLException se) {
                System.out.println(se.toString());
    } catch (DatabaseException dbe) {
                System.err.println(dbe.toString());
    }
  }

  void write(Database db, String key, String data) throws ParseException, Exception {
        theKey = new DatabaseEntry(key.getBytes("UTF-8"));
        theData = new DatabaseEntry(data.getBytes("UTF-8"));
        db.put(null, theKey,theData);
  }

  String read(Database db, String key) throws ParseException, SQLException, Exception {
        theKey = new DatabaseEntry(key.getBytes("UTF-8"));
        theData = new DatabaseEntry();
        String foundData;
        if( db.get(null,theKey,theData, LockMode.DEFAULT) == OperationStatus.SUCCESS ) {
                foundData = new String(theData.getData(), "UTF-8");
        } else {
                throw new SQLException("No record found for key'" + key + "'");
        }

//	System.out.println("read db complete, key: " + key + ", foundData: " + foundData ); // remove later
        return foundData;
  }

//
// Almost every javacode and database manipulation code are positioned 
// upper method of the related method. But some are not. 
//
  final public void Query() throws ParseException, SQLException, Exception {
        Database thisTableDb;
        List<String> tableNameList;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case CREATE:
      CreateTable();
      jj_consume_token(SEMICOLON);
                thisTableDb = myEnv.setDatabase(thisTableName, NOT_READONLY);

                try {
            // colDefHash input, key Prefix : @cd:
            Iterator<Entry<String,String> > colIt = colDefHash.entrySet().iterator();
            while(colIt.hasNext() ){
                Entry<String,String> nowEntry = colIt.next();
                String nowKey = nowEntry.getKey();
                String nowData = nowEntry.getValue();
                write(thisTableDb, nowKey, nowData);
            }

            // forKeyHash input, key Prefix : #fk:
            Iterator<Entry<String,String> > fkIt = forKeyHash.entrySet().iterator();
            while(colIt.hasNext() ){
                Entry<String,String> nowEntry = fkIt.next();
                String nowKey = nowEntry.getKey();
                String nowData = nowEntry.getValue();
                write(thisTableDb, nowKey, nowData);
            }

            // refingPtHash input, key Prefix : !ref->:
            Iterator<Entry<String,String> > refingPtIt = refingPtHash.entrySet().iterator();
            while(refingPtIt.hasNext() ){
                Entry<String,String> nowEntry = refingPtIt.next();
                String nowKey = nowEntry.getKey();
                String nowData = nowEntry.getValue();
                write(thisTableDb, nowKey, nowData);
            }

            } finally {
                    thisTableDb.close();
            }

        //WRITE REFERENCED POINTING HASH INTO EACH TABLES;
        //source : refedPtHash 

            Iterator< Entry<String, HashMap<String, String> > > refedIt = refedPtHash.entrySet().iterator();
            Database nowRefedDb;
            while(refedIt.hasNext()) {
                Entry<String, HashMap<String, String> > nowEntry = refedIt.next();
                String nowRefedTableName = nowEntry.getKey();
                HashMap<String,String> nowRefedPtHash = nowEntry.getValue();

                try {
                         nowRefedDb = myEnv.getDb(nowRefedTableName, NOT_READONLY);
                } catch(DatabaseNotFoundException dbnfe) {
                        {if (true) throw new SQLException("ReferenceTableExistenceError");}
                }

                try{

                        Iterator<Entry<String,String> > refedIt2 = nowRefedPtHash.entrySet().iterator();
                    while(refedIt2.hasNext() ){
                        Entry<String,String> nowEntry2 = refedIt2.next();
                        String nowKey = nowEntry2.getKey();
                        String nowData = nowEntry2.getValue();
                        write(nowRefedDb, nowKey, nowData);
                    }


                } finally {
                        nowRefedDb.close();
                }

            }

                printMessage("'" + thisTableName + "' table is created");
      break;
    case DROP:
      DropTable();
      jj_consume_token(SEMICOLON);
                /*
		if( thisTableName.equals("all") ) { // remove later
		
			myEnv.removeDbAll();
			printMessage("All table dropped");
		
		} else {
		*/



                tableNameList = myEnv.getDatabaseNames();
                if( !tableNameList.contains(thisTableName) ) {
                        {if (true) throw new SQLException("NoSuchTable");}
                }

        thisTableDb = myEnv.setDatabase(thisTableName, NOT_READONLY);


                // add DropReferencedTableError






                myEnv.removeDb(thisTableName);
                printMessage("'" + thisTableName + "' table is dropped" );

                //	}

      break;
    case SHOW:
      ShowTables();
      jj_consume_token(SEMICOLON);
                tableNameList = myEnv.getDatabaseNames();

                if(tableNameList.size()==0){
                        {if (true) throw new SQLException("Show Tables No Table");}
                } else {
                        System.out.println("------------------------");
                        Iterator<String> it = tableNameList.iterator();
                        while(it.hasNext()){
                                System.out.println(it.next());
                        }
                        System.out.println("------------------------");
                }
      break;
    case DESC:
      Desc();
      jj_consume_token(SEMICOLON);
        tableNameList = myEnv.getDatabaseNames();
                if( !tableNameList.contains(thisTableName) ) {
                        {if (true) throw new SQLException("NoSuchTable");}
                }

        thisTableDb = myEnv.setDatabase(thisTableName, NOT_READONLY);
            Cursor thisDbCursor = thisTableDb.openCursor(null, null);

        try {
                theKey = new DatabaseEntry(colDefPrefix.getBytes("UTF-8") );
                theData= new DatabaseEntry();

                        System.out.println("--------------------------------------------------");
                System.out.println("table_name [" + thisTableName +"]" );
                System.out.format("%-24s%-12s%-6s%-8s%n", "column_name", "type", "null", "key");

                OperationStatus retVal = thisDbCursor.getSearchKeyRange(theKey, theData, LockMode.DEFAULT);
                if (retVal != OperationStatus.SUCCESS) {
                        {if (true) throw new SQLException("No Column in the table");}
                } else {

                        while ( retVal == OperationStatus.SUCCESS ) {

                            String nowCol = new String(theData.getData(), "UTF-8");

                            String nowColName = getColInfo(nowCol, COLNAME);
                            String nowColDataType = getColInfo(nowCol, DATATYPE);
                            String nowColNullity = getColInfo(nowCol, NULLITY);
                            String nowColKeyType = getColInfo(nowCol, KEYTYPE);
                            if(nowColKeyType.equals("NOR")) {
                                nowColKeyType = "";
                            }

                                System.out.format("%-24s", nowColName);
                                System.out.format("%-12s", nowColDataType);
                                System.out.format("%-6s", nowColNullity);
                                System.out.format("%-8s%n", nowColKeyType);

                                retVal = thisDbCursor.getNext (theKey, theData, LockMode.DEFAULT);

                        }

                        System.out.println("--------------------------------------------------");
                }

                } finally {
                thisDbCursor.close();
                thisTableDb.close();
        }
      break;
    case SELECT:
      Select();
      jj_consume_token(SEMICOLON);
      break;
    case INSERT:
      Insert();
      jj_consume_token(SEMICOLON);
      break;
    case DELETE:
      Delete();
      jj_consume_token(SEMICOLON);
      break;
    default:
      jj_la1[2] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

//******************* Create table query *******************//
  final public void CreateTable() throws ParseException, SQLException, Exception {
    jj_consume_token(CREATE);
    jj_consume_token(TABLE);
    thisTableName = TableName();
        List<String> tableNameList = myEnv.getDatabaseNames();
        if( tableNameList.contains(thisTableName) ) {
                {if (true) throw new SQLException("Create table has failed: table with the same name already exists");}
        }
    TableElementList();
  }

  final public String TableName() throws ParseException {
    jj_consume_token(LEGAL_IDENTIFIER);
                {if (true) return token.toString();}
    throw new Error("Missing return statement in function");
  }

  final public void TableElementList() throws ParseException, SQLException, Exception {
        primaryKeyOccur = 0;
        forKeyOccur = 0;
        colDefHash = new HashMap<String, String>();
        forKeyHash = new HashMap<String, String>();
        refingPtHash = new HashMap<String, String>();
        refedPtHash = new HashMap<String, HashMap<String, String> >();
        ArrayList<String> priColList = new ArrayList<String>();
        ArrayList<String> forColList = new ArrayList<String>();
        ArrayList<String> refedColList = new ArrayList<String>();
    jj_consume_token(LEFT_PAREN);
    TableElement();
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case COMMA:
        ;
        break;
      default:
        jj_la1[3] = jj_gen;
        break label_2;
      }
      jj_consume_token(COMMA);
      TableElement();
    }
    jj_consume_token(RIGHT_PAREN);
  }

  final public void TableElement() throws ParseException, SQLException, Exception {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case LEGAL_IDENTIFIER:
      ColumnDefinition();
      break;
    case PRIMARY:
    case FOREIGN:
      TableConstraintDefinition();
      break;
    default:
      jj_la1[4] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void ColumnDefinition() throws ParseException, SQLException {
        String col;
        String colName;
        String dt;
        String nullable = "Y";
        String key = "NOR";
    colName = ColumnName();
    dt = DataType();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case NOT:
      nullable = NotNull();
      break;
    default:
      jj_la1[5] = jj_gen;
      ;
    }
                if( colDefHash.containsKey(colDefPrefix + colName) ) {
                        {if (true) throw new SQLException("DuplicateColumnDefError");}
                }
                col = infoToCol(colName,dt,nullable,key);
                setColIntoHash(col);
  }

  final public String NotNull() throws ParseException {
    jj_consume_token(NOT);
    jj_consume_token(NULL);
          {if (true) return "N";}
    throw new Error("Missing return statement in function");
  }

  final public String ColumnName() throws ParseException {
    jj_consume_token(LEGAL_IDENTIFIER);
                {if (true) return token.toString();}
    throw new Error("Missing return statement in function");
  }

  final public String DataType() throws ParseException, SQLException {
        int charLen;
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case INT:
      jj_consume_token(INT);
          {if (true) return "int";}
      break;
    case CHAR:
      jj_consume_token(CHAR);
      jj_consume_token(LEFT_PAREN);
      jj_consume_token(INT_VALUE);
                charLen = Integer.parseInt( token.toString() );
                if ( charLen < 1 ) {
                        {if (true) throw new SQLException("Char Length should be > 0");}
                }
      jj_consume_token(RIGHT_PAREN);
          {if (true) return new String("char("+charLen+")");}
      break;
    case DATE:
      jj_consume_token(DATE);
          {if (true) return "date";}
      break;
    default:
      jj_la1[6] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
    throw new Error("Missing return statement in function");
  }

  final public void TableConstraintDefinition() throws ParseException, SQLException, Exception {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case PRIMARY:
      PrimaryKeyConstraint();
      break;
    case FOREIGN:
      ReferentialConstraint();
      break;
    default:
      jj_la1[7] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  final public void PrimaryKeyConstraint() throws ParseException, SQLException {
    jj_consume_token(PRIMARY);
    jj_consume_token(KEY);
    priColList = ColumnNameList();
                primaryKeyOccur++;
                if(primaryKeyOccur>1){
                        {if (true) throw new SQLException("DuplicatePrimaryKeyDefError");}
                }

                Iterator<String> it = priColList.iterator();
                while(it.hasNext()) {
                        String priColName = it.next();
                        if( !colDefHash.containsKey(colDefPrefix + priColName) ) {
                                {if (true) throw new SQLException("NonExistingColumnDefError");}
                        }
                }

                Iterator<String> it2 = priColList.iterator();
                while(it2.hasNext()) {
                        String priColName = it2.next();
                        String col = getCol(priColName);

                        String kt = getColInfo(col, KEYTYPE);
                        if(kt.equals("FOR") ) {
                                col = modifyColInfo(col, KEYTYPE, "PRI/FOR");
                        } else if (kt.equals("NOR") ) {
                                col = modifyColInfo(col, KEYTYPE, "PRI");
                        }

                        col = modifyColInfo(col, NULLITY, "N");
                        setColIntoHash(col);
                }
  }

  final public void ReferentialConstraint() throws ParseException, SQLException, Exception {
        Database refedDb;
        OperationStatus retVal;
        ArrayList<String> forColDataTypeArr = new ArrayList<String>();
        ArrayList<String> refedColDefList = new ArrayList<String>();
        ArrayList<String> refedColDataTypeArr = new ArrayList<String>();
